# conan-alglib

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
source/cpp/src/: version.template
test_package/: CMakeLists.txt  conanfile.py  example.cpp
